[package]
name = "ed25519keys"
version = "0.1.0"
authors = ["Catenocrypt <catenocrypt@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "2.1.0" }
ed25519-dalek = "=1.0.0-pre.4"
rand = "0.7.3"
